--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="/iCoderbootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="/" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Topics
                         </a>
